# qp-analysis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  prod.sh
backend/: Cargo.toml
backend/src/: db.rs  dummy_db.rs  error.rs  handlers.rs  main.rs  reaper.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs  schema.rs
db/: Cargo.toml
db/src/: lib.rs
fh-scraper/: Cargo.toml
fh-scraper/src/: main.rs
fh-translator/: Cargo.toml
fh-translator/src/: db.rs  main.rs  models.rs
frontend/: Cargo.toml  index.html
frontend/src/: breakdown.rs  components.css  components.rs  interface.rs  lib.rs  main.css  main.rs  pages.rs  plot.rs  speech_box.rs  speech_overlay.rs  util.rs
frontend/src/components/: breakdown.rs  breakdown_engine.rs  breakdown_plot.rs  breakdown_plot_engine.rs  charts.rs  interface.rs  navbar.rs  plot.rs  population.rs  population_engine.rs  population_plot.rs  population_plot_engine.rs  speech_box.rs  speech_overlay.rs
frontend/src/css/: components.css  loader.css  main.css
frontend/src/pages/: about_me_page.rs  error_page.rs  info_page.rs  info_page_data.rs  interface_page.rs  prov_info_page.rs
qp-scraper/: Cargo.toml
qp-scraper/src/: main.rs
qp-translator/: Cargo.toml
qp-translator/src/: db.rs  main.rs  models.rs
scraper/src/: main.rs
