[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
hex = "0.4.3"
log = "0.4.25"
plotters = "0.3.7"
plotters-canvas = "0.3.0"
serde = "1.0.217"
serde_json = "1.0.138"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["HtmlButtonElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"
yew-router = "0.18.0"
