[package]
name = "qp-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
common = { version = "0.1.0", path = "../common" }
diesel = { version = "2.2.7", features = ["mysql", "time"] }
dotenvy = "0.15.7"
regex = "1.11.1"
scraper = "0.22.0"
time = { version = "0.3.37", features = ["parsing"] }
